Refactor openapi
